css/pixel-editor.scss
/* ... */
//don't let svg handle click events, just send to parents
svg {
  pointer-events: none;
  path {
    pointer-events: none;
  }
}

//remove blue outline in chrome
*:focus {
  outline: 0 !important;
}

canvas {
  cursor: url('/pixel-art-where-to-start/pencil-tool-cursor.png');

  border: solid 1px #fff;
  image-rendering:optimizeSpeed;             /* Legal fallback */
  image-rendering:-moz-crisp-edges;          /* Firefox        */
  image-rendering:-o-crisp-edges;            /* Opera          */
  image-rendering:-webkit-optimize-contrast; /* Safari         */
  image-rendering:optimize-contrast;         /* CSS3 Proposed  */
  image-rendering:crisp-edges;               /* CSS4 Proposed  */
  image-rendering:pixelated;                 /* CSS4 Proposed  */
  -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
  width: 400px;
  height: 400px;
  position: fixed;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.64);
}

#checkerboard {
  z-index:1;
}

#pixel-canvas {
  z-index:2;
  background:transparent;
}

#eyedropper-preview {
  position: absolute;
  width: 45px;
  height: 45px;
  border-radius: 30px;
  border: solid 10px red;
  z-index: 1200;
  display: none;
  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25), inset 0 0 6px 0 rgba(0, 0, 0, 0.2);
  pointer-events: none;
  &.dark {
    box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.5), inset 0 0 6px 0 rgba(255, 255, 255, 0.5);
  }
}

#brush-preview {
  position: absolute;
  border: solid 1px #fff;
  z-index: 1200;
  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5), inset 0 0 2px 0 rgba(0, 0, 0, 0.5);
  pointer-events: none;
  left: -500px;
  &.dark {
    border: solid 1px #000;
    box-shadow: 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 0 rgba(255, 255, 255, 0.8);
  }
}

#canvas-view {
  bottom: 0px;
  left: 64px;
  right: 48px;
  top: 48px;
  cursor: none;
  position: fixed;
  display: block;
}

#canvas-view-shadow {
  box-shadow: inset 0px 0px 4px 0px rgba(0, 0, 0, 0.4);
  position: fixed;
  bottom: 0px;
  left: 64px;
  right: 48px;
  top: 48px;
  display: block;
  pointer-events: none;
}

#main-menu {
  height: 48px;
  left: 0;
  right: 0;
  list-style-type: none;
  margin: 0;
  padding: 0;
  background-color: color(base);
  position: fixed;
  z-index: 1110;
  overflow: visible;
  &>li {
    float: left;
    height: 100%;
  }
  li button {
    color: color(menu, foreground);
    height: 100%;
    padding: 17px;
    background: none;
    border: none;
    cursor: pointer;
  }
  li.selected {
    background-color: color(menu);
    &>button {
      color: color(menu, foreground, hover);
    }
    ul {
      display: block;
    }
  }
  li ul {
    display: none;
    position: absolute;
    top: 48px;
    list-style-type: none;
    padding: 0;
    margin: 0;
    background-color: color(menu);
    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
    padding-bottom: 2px;
    li {
      width: 100%;
      button {
        width: 100%;
        text-align: left;
        padding: 8px 32px 8px 16px;
        &:hover {
          background-color: color(menu, background, hover);
          color: color(menu, foreground, hover);
        }
      }
    }
  }
  .disabled {
    color: #6f6e70 !important;
  }
}


/*app title*/

.logo {
  color: #6f6873;
  text-transform: uppercase;
  font-weight: bold;
  padding: 17px 10px 0;
  cursor: default;
  box-sizing: border-box;
}

#data-holders {
  display: none;
}

#tools-menu,
#colors-menu {
  list-style-type: none;
  top: 48px;
  bottom: 0;
  padding: 0;
  margin: 0;
  background-color: color(base);
  box-sizing: border-box;
  position: fixed;
  z-index: 1120;
}

#tools-menu {
  left: 0;
  width: 64px;
}

#colors-menu {
  right: 0;
  width: 48px;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  li {
    width: 48px;
    flex-basis: 48px;
    
    &:not(.noshrink) {
      flex-grow: 1;
    }
    &.noshrink {
      flex-grow: 0;
      flex-shrink: 0;
    }
  }  
}

//added when the color is a duplicate of another
#duplicate-color-warning {
  display: inline-block;
  visibility: hidden;
  margin-left: 5px;
  opacity: 0.75;
  cursor: help;
  &:hover {
    opacity: 0.9;
  }
}

.shake {
  animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
  position: relative;
}

@keyframes shake {
  10%,
  90% {
    transform: translate3d(-1px, 0, 0);
  }
  20%,
  80% {
    transform: translate3d(1px, 0, 0);
  }
  30%,
  50%,
  70% {
    transform: translate3d(-2px, 0, 0);
  }
  40%,
  60% {
    transform: translate3d(2px, 0, 0);
  }
}

//floating button to open jscolor picker
.color-edit-button {
  position: absolute;
  top: 3px;
  left: 0px;
  background: color(base);
  padding: 6px 10px 3px 6px;
  border-radius: 4px 0 0 4px;
  cursor: pointer;
  transition: left 0.25s;
  z-index: -1;
  box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.2);
  path {
    fill: color(base, foreground);
  }
  &:hover {
    background: color(base, background, hover);
    path {
      fill: color(base, foreground, hover);
    }
  }
  //class added when jscolor is opened
  &.hidden {
    left: 0px !important;
  }
}

#colors-menu li:hover .color-edit-button {
  display: block;
  left: -32px;
}

#colors-menu li.selected:hover .color-edit-button {
  display: block;
  left: -35px;
}

#tools-menu li,
#colors-menu li {
  position: relative;
}

#colors-menu li button {
  height: 100%;
  display: block;
}

.color-value {
  display: none;
}

#add-color-button {
  background: color(base);
  
  path {
    fill: #6f6873;
  }
}

#tools-menu li button:first-child {
  text-align: center;
  border: none;
  background: none;
  width: 100%;
  padding: 0;
  cursor: pointer;
  height: 64px;
}

#tools-menu li button path {
  fill: color(base, foreground);
}

#tools-menu li:hover button:first-child path {
  fill: color(base, foreground, hover);
}
/* ... */

